--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,11 @@ header nav ul a:hover::after, header nav ul a:hover::before{
     background: linear-gradient(to right,#bd0184,#ff4b5c);
 }
 
+
+.recetas p{
+    font-family: 'Lato', sans-serif;
+    font-size: 1.1rem;
+}
     /* estilos de los ingredientes */
 
 .ingredientes{
@@ -195,6 +200,7 @@ header nav ul a:hover::after, header nav ul a:hover::before{
 }
 .ingredientes ul li, .preparacion ul li{
     list-style: none;
+    font-size: 1.1rem;
 }
 
 .recetas-container-main .ingredientes{
@@ -210,9 +216,6 @@ header nav ul a:hover::after, header nav ul a:hover::before{
     justify-content: space-evenly;
 }
 
-.preparacion ul li{
-    padding-bottom: 2%;
-}
 
 /* estilos resetas normales */
 
@@ -231,6 +234,7 @@ header nav ul a:hover::after, header nav ul a:hover::before{
     margin: 30px;
     height: 100%;
     box-shadow: 1px 1px 5px black;
+    border-radius: 5px;
 }
 
 .card-container .card-recetas img{
@@ -243,6 +247,9 @@ header nav ul a:hover::after, header nav ul a:hover::before{
 
 .text-card h3{
     padding-bottom: 1rem;
+}
+.preparacion ul li{
+    padding-bottom: 2%;
 }
 
 /* estilos de la seccion de servicios */
@@ -359,15 +366,44 @@ input[type='submit']:hover{
     height: 100%;
     box-shadow: 1px 1px 5px black;
     border-radius: 5px;
+    background-color: white;
 }
 
 .nosotros .nosotros-card img{
     width: 100%;
-    border-radius: 5px;
+    border-radius: 5px 5px 0px 0px;
 }
 
 .nosotros .nosotros-card .nosotros-text{
     padding: 2rem;
     background-color: white;
-    border-radius: 5px;
+    border-radius: 0px 0px 5px 5px;
+}
+
+
+/* estilos de la seccion del footer */
+
+footer{
+    width: 100%;
+    height: 60vh;
+    background-color: #59405ccc;
+    color: white;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+
+footer .contacto , footer .horario{
+    display: flex;
+    flex-direction: column;
+    line-height: 30px;
+    margin: rem;
+}
+
+footer h4{
+    font-size: 2rem;
+    margin-bottom: 2rem;
 }
